--- a/index.html.erb
+++ b/index.html.erb
@@ -4,20 +4,21 @@
     <link rel="stylesheet" href="style.css">
     <title><%= @page_title %></title>
   </head>
+  <div id="header">
   <header> 
     <h1>Duncan's Blog</h1>
   </header>
- 
+  </div>
+<div id="container"> 
 <body>
   <% @post.each do |post| %>
-<div>
+
   <h2><%= post["title"] %> </h2>
   <img src="<%= post["image"] %>">
   <p><%= post["body"] %></p>
 </div>
 
   <% end %>
-
-
 </body>
+</div>
 </html>
